refactor edit & delete

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "babel-jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
+    "jest-localstorage-mock": "^2.4.21",
     "uniqid": "^5.4.0"
   }
 }
